Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.4.0
-
None
-
MacOS X 10.7 XCode 4.6.3
-
d47b9ace50d47a4472dc9fb029bbf6e8dd810c01
Description
Q_CC_CLANG define always has a value 305 (clang 3.5) regardless of real clang version
Changing file "qtbase/src/corelib/global/qcompilerdetection.h" from line 157 fixed this problem:
if __apple_build_version__ >= 6000051
define Q_CC_CLANG 305
elif __apple_build_version__ >= 5030038
define Q_CC_CLANG 304
elif __apple_build_version__ >= 5000275
define Q_CC_CLANG 303
elif __apple_build_version__ >= 4250024
define Q_CC_CLANG 302
elif __apple_build_version__ >= 3180045
define Q_CC_CLANG 301
elif __apple_build_version__ >= 2111001
define Q_CC_CLANG 300
Attachments
Issue Links
- replaces
-
QTBUG-43280 Can't build Qt 5.4 on MacOS X 10.7
-
- Closed
-
-
QTBUG-43722 Apple Clang version detected incorrectly
-
- Closed
-
-
QTBUG-44138 Apple clang version 4.0 not able to build objective-c file (.mm) that includes QDebug
-
- Closed
-